src/objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Current_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The current rate of discount on the merchandise. This is subtracted from the price of the object when invoice is created.</description>
        <label>Current Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Price__c</fullName>
        <formula>Price__c * (1 - (Current_Discount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Popular__c</fullName>
        <formula>(Current_Discount__c &gt; 0.3) &amp;&amp; (Price__c &lt; 14000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Popular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The price of the given merchandise in Indian Rupees</description>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The number of given merchandise currently present in the warehouse</description>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>